--- a/birthday-card/components/envelope/envelope.module.css
+++ b/birthday-card/components/envelope/envelope.module.css
@@ -1,7 +1,7 @@
 .envelopeContainer {
     position: relative;
-    width: 400px;
-    height: 250px;
+    width: 50vw;
+    height: 35.4vw;
     display: grid;
     place-items: center;
 }
@@ -43,14 +43,6 @@
     height: 95%;
     position: absolute;
     z-index: 8;
-}
-
-.inner {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
     background: #fff;
     backface-visibility: hidden;
 }
