--- a/birthday-card/components/styles.module.css
+++ b/birthday-card/components/styles.module.css
@@ -14,6 +14,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 3;
     background: linear-gradient(-30deg,
             transparent 50%,
             #ccc calc(50% + 1px),
@@ -26,23 +27,42 @@
             #fefefe 50%,
             #ccc calc(50% + 1px),
             transparent calc(50% + 1px));
+    border-radius: 3%;
 }
 
 .envelopeBack {
     position: absolute;
     width: 100%;
     height: 100%;
+    z-index: 1;
     background: #efefef;
     filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.25));
     cursor: pointer;
     backface-visibility: visible;
+    border-radius: 3%;
 }
 
-.card {
+.cardContainer {
     width: 95%;
     height: 95%;
+    z-index: 2;
     position: absolute;
-    z-index: 8;
-    background: #fff;
+    perspective: 1200px;
+    transform-style: preserve-3d;
+}
+
+.cardFront {
+    width: 100%;
+    height: 100%;
+    background: #ffffff;
     backface-visibility: hidden;
+    position: relative;
+}
+
+.cardBack {
+    width: 100%;
+    height: 100%;
+    background: #000000;
+    backface-visibility: hidden;
+    position: relative;
 }
