Add a nice zoom effect on the back

--- a/birthday-card/app/page.module.css
+++ b/birthday-card/app/page.module.css
@@ -3,7 +3,7 @@
     height: 100%;
     width: 100%;
     place-items: center;
-    background: #e6c840;
+    background: #233329;
     position: fixed;
 }
 
