--- a/birthday-card/components/styles.module.css
+++ b/birthday-card/components/styles.module.css
@@ -1,9 +1,21 @@
 .envelopeContainer {
     position: relative;
-    width: 50vw;
-    height: 35.4vw;
     display: grid;
     place-items: center;
+}
+
+@media (orientation: portrait) {
+    .envelopeContainer {
+        width: 90vw;
+        height: 63.8vw;
+    }
+}
+
+@media (orientation: landscape) {
+    .envelopeContainer {
+        width: 100vh;
+        height: 70.9vh;
+    }
 }
 
 .envelopeFront {
