--- a/birthday-card/components/styles.module.css
+++ b/birthday-card/components/styles.module.css
@@ -74,7 +74,7 @@
 .cardBack {
     width: 100%;
     height: 100%;
-    background: #000000;
+    background: #ffffff;
     backface-visibility: hidden;
     position: relative;
 }
