Add empty message validation

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,7 +3,7 @@
     height: 100%;
     width: 100%;
     place-items: center;
-    background: #233329;
+    background: #304D30;
     position: fixed;
 }
 
